fixed image scroll on mobile

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 
 @media only screen and (max-width: 768px) {
   .scrollable-image-container {
-    background-attachment: contain;
+    background-size: contain;
   }
 }
 
